# imageinfo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  imageinfo.hpp  main.cpp  test_files.cpp  tests.cpp
.github/workflows/: build.yml  ci.yml  linux.yml  macos.yml  windows-x64.yml  windows-x86.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  imageinfo  imageinfo_tests
cli/: main.cpp
images/invalid/: crash_assert_failed  crash_avif_1  crash_avif_2  crash_avif_3  crash_avif_4  crash_hdr_1  crash_hdr_2  crash_hdr_3  crash_hdr_4  crash_icns_1  crash_icns_2  crash_png_1  crash_tiff_1
images/valid/avif/: sample.avif  sample3.avif
images/valid/hdr/: sample.hdr
images/valid/heic/: sample.heic  sample4.heic
images/valid/j2k/: _00042.j2k  cthead1.j2k  sample.j2k
images/valid/jph/: byte.jph
images/valid/qoi/: sample.qoi
images/valid/tga/: sample.tga
include/: imageinfo.hpp
tests/: tests.cpp
